--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "npm-run-all --parallel build:**",
+    "build:app": "rollup -c",
+    "build:functions": "netlify-lambda build functions",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
