--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
+    "netlify-lambda": "^1.4.2",
     "svelte": "^3.0.0",
     "svelte-apollo": "^0.3.0",
     "graphql": "^14.4.2",
@@ -24,7 +25,7 @@
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
     "node-fetch": "^2.3.0",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
   },
   "scripts": {
     "build": "npm-run-all --parallel build:**",
