--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
     "node-fetch": "^2.3.0",
-    "sirv-cli": "^0.4.4",
+    "sirv-cli": "^0.4.4"
   },
   "scripts": {
     "build": "npm-run-all --parallel build:**",
