--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "svelte-app",
+  "name": "svelte-chat-app",
   "version": "1.0.0",
   "devDependencies": {
+    "apollo-boost": "^0.4.3",
+    "apollo-client": "^2.6.3",
+    "mocha": "^6.2.0",
+    "netlify-lambda": "^1.4.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
@@ -9,14 +13,11 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
-    "netlify-lambda": "^1.4.2",
     "svelte": "^3.0.0",
-    "svelte-apollo": "^0.3.0",
-    "graphql": "^14.4.2",
-    "apollo-client": "^2.6.3",
-    "apollo-boost": "^0.4.3"
+    "svelte-apollo": "^0.3.0"
   },
   "dependencies": {
+    "@sveltejs/svelte-virtual-list": "^3.0.1",
     "apollo-link-context": "^1.0.17",
     "apollo-link-http": "^1.5.14",
     "apollo-server-lambda": "^2.4.8",
@@ -33,6 +34,7 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "start:dev": "sirv public --single --dev",
+    "test": "mocha"
   }
 }
