--- a/functions/graphQLEndpoint/package.json
+++ b/functions/graphQLEndpoint/package.json
@@ -19,9 +19,11 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-http": "^1.5.14",
     "apollo-server-lambda": "^2.4.8",
+    "bcryptjs": "^2.4.3",
     "graphql": "^14.1.1",
     "graphql-request": "^1.8.2",
     "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.4"
+    "graphql-tools": "^4.0.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
