--- a/functions/graphQLEndpoint/package.json
+++ b/functions/graphQLEndpoint/package.json
@@ -16,6 +16,7 @@
   "author": "Netlify",
   "license": "MIT",
   "dependencies": {
+    "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.17",
     "apollo-link-http": "^1.5.14",
     "apollo-server-lambda": "^2.4.8",
