--- a/functions/graphQLEndpoint/package.json
+++ b/functions/graphQLEndpoint/package.json
@@ -2,7 +2,7 @@
   "name": "fauna-graphql",
   "version": "1.0.0",
   "description": "netlify functions:create - set up for fauna db + apollo graphql",
-  "main": "fauna-graphql.js",
+  "main": "graphQLEndpoint.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,7 @@
     "apollo",
     "fauna"
   ],
-  "author": "Netlify",
+  "author": "paul",
   "license": "MIT",
   "dependencies": {
     "apollo-boost": "^0.4.4",
