--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql-request": "^1.8.2",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
+    "netlify-identity-widget": "^1.5.5",
     "node-fetch": "^2.3.0",
     "sirv-cli": "^0.4.4"
   },
